--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@thirdweb-dev/auth": "^4.1.48",
     "@thirdweb-dev/react": "^4.4.0",
-    "@thirdweb-dev/wallets": "^2.4.3",
     "@thirdweb-dev/sdk": "^4.0.28",
+    "@thirdweb-dev/wallets": "^2.4.3",
     "ethers": "^5.7.2",
+    "framer-motion": "^11.0.22",
     "next": "^13.1.6",
     "next-auth": "^4.19.2",
     "react": "^18.2.0",
